[package]
name = "openstack_types"
description = "OpenStack API Types"
version = "0.22.0"
keywords = ["api", "openstack"]
categories = ["api-bindings"]
authors = ["Artem Goncharov (gtema)"]
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
default = [
  "block_storage",
  "compute",
  "container_infra",
  "dns",
  "identity",
  "image",
  "load_balancer",
  "network",
  "object_store",
  "placement",
]
block_storage = []
compute = []
container_infra = []
dns = []
identity = []
image = []
load_balancer = []
network = []
object_store = []
placement = []
# include openapi specs
openapi = []

[dependencies]
chrono = { workspace= true }
serde = { workspace = true }
serde_json = { workspace = true }
structable = { workspace = true }

[dev-dependencies]
openstack_sdk = { path = "../openstack_sdk" }
reqwest.workspace = true
tokio.workspace = true
url.workspace = true

[[test]]
name = "mocked"
path = "tests/mocked/main.rs"
test = false
