[package]
name = "structable_derive"
version = "0.1.0"
authors = ["Artem Goncharov <artem.goncharov@gmail.com>"]
license = "Apache-2.0"
description = "A crate for 'serializing' structs as Vec<Vec<String>> tables"
homepage = "https://github.com/gtema/vectable-derive"
repository = "https://github.com/gtema/vectable-derive"
categories = ["command-line-interface"]
keywords = ["table", "cli", "format"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "~0.20"
proc-macro2 = "~1.0"
syn = { version = "~2.0", features=["full"] }
quote = "~1.0"

[lib]
proc-macro = true
