[package]
name = "structable_derive"
version = "0.1.6"
authors = ["Artem Goncharov (gtema)"]
description = "A crate for 'serializing' structs as Vec<Vec<String>> tables"
categories = ["command-line-interface"]
keywords = ["table", "cli", "format"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md"]
rust-version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
darling = "^0.20"
proc-macro2 = "^1.0"
syn = { version = "^2.0", features=["full"] }
quote = "^1.0"

[lib]
proc-macro = true

[dev-dependencies]
serde_json = { workspace = true }
serde = { workspace = true }
