[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[dependencies]
clap = { workspace = true }
openstack_cli = { path="../openstack_cli" }
mdbook = { version = "^0.4", default-features = false }
serde_json = { workspace = true }
semver = { version = "^1.0" }
regex = { workspace = true }

[package.metadata.dist]
dist = false

[[bin]]
name = "osc-cli-md"
path = "src/bin/osc-cli-md.rs"
test = true
bench = false

[lib]
