[package]
name = "openstack-cli-auth"
description = "OpenStack CLI auth commands"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
chrono.workspace = true
clap.workspace = true
eyre.workspace = true
openstack-cli-core = { version = "0.13", path = "../../cli-core/" }
openstack_sdk = { path="../../openstack_sdk", version = "^0.22", default-features = false, features = ["async", "identity"] }
openstack-sdk-core = { path="../../sdk/core", version = "^0.22" }
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
structable = { workspace = true }
tracing.workspace = true


[lints]
workspace = true
