[package]
name = "openstack-cli-api"
description = "OpenStack CLI Api commands"
version = "0.13.8"
license.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
openstack-cli-core.workspace = true
openstack_sdk = { workspace = true, features = ["async", "identity"] }
eyre = { workspace = true }
http = { workspace = true }
serde_json = {workspace = true}
tracing = { workspace = true}

[lints]
workspace = true
