[package]
name = "openstack-cli-catalog"
description = "OpenStack CLI Catalog commands"
version = "0.13.8"
license.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
openstack-cli-core.workspace = true
openstack_sdk = { workspace = true, features = ["async", "identity"] }
openstack_sdk_core.workspace = true
serde.workspace = true
serde_json.workspace = true
structable = { workspace = true }
tracing.workspace = true

[lints]
workspace = true
