[package]
name = "openstack-cli-dns"
description = "OpenStack CLI DNS commands"
version = "0.13.7"
license.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
openstack-cli-core.workspace = true
openstack_sdk = { workspace = true, features = ["async", "dns", "identity"] }
openstack_sdk_core.workspace = true
openstack_types.workspace = true
eyre = { workspace = true }
http = { workspace = true }
serde_json = {workspace = true}
tracing = { workspace = true}

[lints]
workspace = true
