[package]
name = "openstack-cli-identity"
description = "OpenStack CLI Identity commands"
version = "0.13.7"
license.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
base64 = { workspace = true, optional = true }
clap.workspace = true
dialoguer.workspace = true
eyre.workspace = true
openstack-cli-core.workspace = true
openstack_sdk = { workspace = true, features = ["async", "identity", "identity"] }
openstack_sdk_core.workspace = true
openstack_types.workspace = true
http.workspace = true
serde_json.workspace = true
tracing.workspace = true
webauthn-authenticator-rs = { workspace = true, optional = true }
webauthn-rs-proto = { workspace = true, optional = true }

[lints]
workspace = true

[features]
default = []
keystone_ng = ["openstack_sdk/keystone_ng", "openstack_types/keystone_ng"]
passkey = ["keystone_ng", "openstack_sdk/passkey", "dep:webauthn-authenticator-rs", "dep:webauthn-rs-proto", "dep:base64"]
