[package]
name = "openstack-cli-network"
description = "OpenStack CLI Network commands"
version = "0.2.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap = { workspace = true }
eyre = { workspace = true }
openstack-cli-core.workspace = true
openstack_sdk = { workspace = true, features = ["async", "network", "identity"] }
openstack_sdk_core.workspace = true
openstack_types.workspace = true
http = { workspace = true }
serde_json = {workspace = true}
tracing = { workspace = true}

[lints]
workspace = true
